manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iot-ingress
  namespace: default
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - myiot.local
    secretName: iot-tls
  rules:
  - host: myiot.local
    http:
      paths:
      - path: /ui
        pathType: Prefix
        backend:
          service:
            name: frontend-iot
            port:
              number: 3000
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-iot
            port:
              number: 8000
      - path: /docs
        pathType: Prefix
        backend:
          service:
            name: backend-iot
            port:
              number: 8000
      - path: /openapi.json
        pathType: Prefix
        backend:
          service:
            name: backend-iot
            port:
              number: 8000
